--- a/Phone_VB/Phone_VB.vbproj
+++ b/Phone_VB/Phone_VB.vbproj
@@ -115,34 +115,40 @@
     <Compile Include="Classes\Models\Brand.vb" />
     <Compile Include="Classes\Models\Phone.vb" />
     <Compile Include="Classes\Models\User.vb" />
-    <Compile Include="Forms\HomeForm.Designer.vb">
+    <Compile Include="Forms\Main\HomeForm.Designer.vb">
       <DependentUpon>HomeForm.vb</DependentUpon>
     </Compile>
-    <Compile Include="Forms\HomeForm.vb">
+    <Compile Include="Forms\Main\HomeForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\LoginForm.Designer.vb">
+    <Compile Include="Forms\Auth\LoginForm.Designer.vb">
       <DependentUpon>LoginForm.vb</DependentUpon>
     </Compile>
-    <Compile Include="Forms\LoginForm.vb">
+    <Compile Include="Forms\Auth\LoginForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\MainForm.Designer.vb">
+    <Compile Include="Forms\Main\MainForm.Designer.vb">
       <DependentUpon>MainForm.vb</DependentUpon>
     </Compile>
-    <Compile Include="Forms\MainForm.vb">
+    <Compile Include="Forms\Main\MainForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\PhoneForm.Designer.vb">
+    <Compile Include="Forms\Phone\PhoneDetailForm.Designer.vb">
+      <DependentUpon>PhoneDetailForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Phone\PhoneDetailForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Phone\PhoneForm.Designer.vb">
       <DependentUpon>PhoneForm.vb</DependentUpon>
     </Compile>
-    <Compile Include="Forms\PhoneForm.vb">
+    <Compile Include="Forms\Phone\PhoneForm.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\PhoneInputForm.Designer.vb">
+    <Compile Include="Forms\Phone\PhoneInputForm.Designer.vb">
       <DependentUpon>PhoneInputForm.vb</DependentUpon>
     </Compile>
-    <Compile Include="Forms\PhoneInputForm.vb">
+    <Compile Include="Forms\Phone\PhoneInputForm.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -166,19 +172,22 @@
     <Compile Include="Utilities\PagingModels.vb" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Forms\HomeForm.resx">
+    <EmbeddedResource Include="Forms\Main\HomeForm.resx">
       <DependentUpon>HomeForm.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\LoginForm.resx">
+    <EmbeddedResource Include="Forms\Auth\LoginForm.resx">
       <DependentUpon>LoginForm.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\MainForm.resx">
+    <EmbeddedResource Include="Forms\Main\MainForm.resx">
       <DependentUpon>MainForm.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\PhoneForm.resx">
+    <EmbeddedResource Include="Forms\Phone\PhoneDetailForm.resx">
+      <DependentUpon>PhoneDetailForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Phone\PhoneForm.resx">
       <DependentUpon>PhoneForm.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\PhoneInputForm.resx">
+    <EmbeddedResource Include="Forms\Phone\PhoneInputForm.resx">
       <DependentUpon>PhoneInputForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
