--- a/Phone_VB/Phone_VB.vbproj
+++ b/Phone_VB/Phone_VB.vbproj
@@ -69,6 +69,9 @@
     <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net35\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
@@ -99,25 +102,40 @@
     <Compile Include="Classes\Dtos\ExportRequestDto.vb" />
     <Compile Include="Classes\Dtos\ImportRequestDto.vb" />
     <Compile Include="Classes\Dtos\LoginRequest.vb" />
+    <Compile Include="Classes\Dtos\PermissionDto.vb" />
     <Compile Include="Classes\Dtos\PhoneDto.vb" />
+    <Compile Include="Classes\Dtos\RoleCreateRequest.vb" />
+    <Compile Include="Classes\Dtos\RoleDto.vb" />
+    <Compile Include="Classes\Dtos\RoleUpdateRequest.vb" />
     <Compile Include="Classes\Dtos\UpdatePhoneRequest.vb" />
     <Compile Include="Classes\Dtos\UserDto.vb" />
+    <Compile Include="Classes\Models\Permission.vb" />
+    <Compile Include="Classes\Models\Role.vb" />
     <Compile Include="Classes\Models\StockTransaction.vb" />
     <Compile Include="Classes\Dtos\StockTransactionDto.vb" />
     <Compile Include="Classes\Repositories\BrandRepository.vb" />
     <Compile Include="Classes\Repositories\IBrandRepository.vb" />
+    <Compile Include="Classes\Repositories\IPermissionRepository.vb" />
     <Compile Include="Classes\Repositories\IPhoneRepository.vb" />
+    <Compile Include="Classes\Repositories\IRoleRepository.vb" />
     <Compile Include="Classes\Repositories\IStockTransactionRepository.vb" />
     <Compile Include="Classes\Repositories\IUserRepository.vb" />
+    <Compile Include="Classes\Repositories\PermissionRepository.vb" />
     <Compile Include="Classes\Repositories\PhoneRepository.vb" />
+    <Compile Include="Classes\Repositories\RoleRepository.vb" />
     <Compile Include="Classes\Repositories\StockTransactionRepository.vb" />
     <Compile Include="Classes\Repositories\UserRepository.vb" />
     <Compile Include="Classes\Services\BrandService.vb" />
     <Compile Include="Classes\Services\IBrandService.vb" />
+    <Compile Include="Classes\Services\IPermissionService.vb" />
     <Compile Include="Classes\Services\IPhoneService.vb" />
+    <Compile Include="Classes\Services\IRoleService.vb" />
     <Compile Include="Classes\Services\IStockTransactionService.vb" />
     <Compile Include="Classes\Services\IUserService.vb" />
+    <Compile Include="Classes\Services\PermissionService.vb" />
+    <Compile Include="Classes\Services\PermissionSyncService.vb" />
     <Compile Include="Classes\Services\PhoneService.vb" />
+    <Compile Include="Classes\Services\RoleService.vb" />
     <Compile Include="Classes\Services\StockTransactionService.vb" />
     <Compile Include="Classes\Services\UserService.vb" />
     <Compile Include="Classes\Models\Brand.vb" />
@@ -139,6 +157,18 @@
       <DependentUpon>MainForm.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms\Main\MainForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Permission\PermissionForm.Designer.vb">
+      <DependentUpon>PermissionForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Permission\PermissionForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Permission\PermissionSelectForm.Designer.vb">
+      <DependentUpon>PermissionSelectForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Permission\PermissionSelectForm.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Phone\PhoneDetailForm.Designer.vb">
@@ -163,6 +193,18 @@
       <DependentUpon>StockInOutForm.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms\Phone\StockInOutForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Role\RoleForm.Designer.vb">
+      <DependentUpon>RoleForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Role\RoleForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Role\RoleInputForm.Designer.vb">
+      <DependentUpon>RoleInputForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Role\RoleInputForm.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\StockTrans\StockTransDetailForm.Designer.vb">
@@ -196,6 +238,9 @@
     <Compile Include="ServiceRegistry.vb" />
     <Compile Include="Utilities\CurrentUser.vb" />
     <Compile Include="Utilities\PagingModels.vb" />
+    <Compile Include="Utilities\PermissionDescriptions.vb" />
+    <Compile Include="Utilities\PermissionEnum.vb" />
+    <Compile Include="Utilities\PermissionSocketClient.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Forms\Main\HomeForm.resx">
@@ -206,6 +251,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Main\MainForm.resx">
       <DependentUpon>MainForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Permission\PermissionForm.resx">
+      <DependentUpon>PermissionForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Phone\PhoneDetailForm.resx">
       <DependentUpon>PhoneDetailForm.vb</DependentUpon>
@@ -218,6 +266,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Phone\StockInOutForm.resx">
       <DependentUpon>StockInOutForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Role\RoleForm.resx">
+      <DependentUpon>RoleForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Role\RoleInputForm.resx">
+      <DependentUpon>RoleInputForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\StockTrans\StockTransDetailForm.resx">
+      <DependentUpon>StockTransDetailForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\StockTrans\StockTransForm.resx">
       <DependentUpon>StockTransForm.vb</DependentUpon>
@@ -241,12 +298,14 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Sql\phone.sql" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="FunctionalDesign\" />
+    <Folder Include="Utilities\Icons\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
