--- a/Phone_VB/Phone_VB.vbproj
+++ b/Phone_VB/Phone_VB.vbproj
@@ -69,14 +69,12 @@
     <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net35\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -219,6 +217,12 @@
     <Compile Include="Forms\StockTrans\StockTransForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\User\OnlineUsersForm.Designer.vb">
+      <DependentUpon>OnlineUsersForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\User\OnlineUsersForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -241,6 +245,8 @@
     <Compile Include="Utilities\PermissionDescriptions.vb" />
     <Compile Include="Utilities\PermissionEnum.vb" />
     <Compile Include="Utilities\PermissionSocketClient.vb" />
+    <Compile Include="Utilities\SocketModels.vb" />
+    <Compile Include="Utilities\SocketMessageTypes.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Forms\Main\HomeForm.resx">
@@ -298,7 +304,6 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Sql\phone.sql" />
